[package]
name = "punkte"
version = "0.1.0"
description = "An interactive background animation for the Web written in Rust (WASM)"
repository = "https://github.com/sahithyen/punkte.git"
authors = ["Sahithyen Kanaganayagam <mail@sahithyen.com>"]
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.87"
console_error_panic_hook = { version = "0.1.7", optional = true }
gloo = "0.10.0"
js-sys = "0.3.64"
rand = { version = "0.8.5", features = ["small_rng"] }
getrandom = { version = "0.2.10", features = ["js"] }
either = "1.9.0"

[dependencies.web-sys]
version = "0.3.64"
features = [
  'console',
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[profile.release]
lto = true
opt-level = 3
