[package]
name = "punkte-core"
version = "0.1.0"
description = "An interactive background animation for the Web written in Rust (WASM)"
repository = "https://github.com/sahithyen/punkte.git"
authors = ["Sahithyen Kanaganayagam <mail@sahithyen.com>"]
license-file = "../LICENSE"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.92"
console_error_panic_hook = { version = "0.1.7", optional = true }
gloo = "0.11.0"
js-sys = "0.3.69"
rand = { version = "0.8.5", features = ["small_rng"] }
getrandom = { version = "0.2.15", features = ["js"] }
either = "1.12.0"
serde = { version = "1.0.203", features = ["derive"] }

[dependencies.web-sys]
version = "0.3.69"
features = [
  'console',
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]

[profile.release]
lto = true
opt-level = 3
